kubernetes/apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app: forgejo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: forgejo
