kubernetes/apps/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: forgejo
          port: 3000
  tls: {}
